--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,7 +1,7 @@
 /* 全体の基本スタイル */
 body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #f0f0f0;
     color: #333;
     padding: 40px;
     margin: 0;
@@ -35,7 +35,7 @@ input[type="password"] {
 /* ボタン */
 input[type="submit"] {
     width: 100%;
-    background-color: #4CAF50;
+    background: linear-gradient(45deg, #B67B03 0%, #DAAF08 45%, #FEE9A0 70%, #DAAF08 85%, #B67B03 90% 100%);
     color: white;
     padding: 12px;
     border: none;
@@ -45,7 +45,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background: linear-gradient(45deg, #757575 0%, #9E9E9E 45%, #E8E8E8 70%, #9E9E9E 85%, #757575 90% 100%);
 }
 
 /* エラーメッセージ */
@@ -65,4 +65,9 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+div.header {
+    text-align: right;
+    margin-bottom: 20px;
 }
